# ai-skills

./: .gitignore  README.md
google-sheets/: SKILL.md  pyproject.toml
google-sheets/agents/: openai.yaml
google-sheets/google_sheets_skill/: __init__.py  config.py  drafts.py  formatting.py  memory.py  paths.py  rich_text.py  sheets.py
google-sheets/scripts/: auth.py  change_bulk_cell.py  change_cell.py  create_tab.py  draft.py  format_sheet.py  memory.py  preview_changes.py  read_sheet.py  write_sheet.py
google-sheets/tests/: test_bulk_workflow.py  test_drafts.py  test_rich_text.py
